[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
pin-project = "1"

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
tokio-util = { version = "0.7", features = ["compat"] } 